template/templates/sarnia_gives/css/modules.css
#text_sizer {
	float: right;
	line-height: 27px;
	margin: 8px 0 0 10px;
}
.no-js #text_sizer { display: none; }
#text_sizer span { cursor: pointer; }
#text_sizer .decrease { font-size: 0.9em; }

/* modules */
.moduletable {}
	
.moduletable h3 {
	background: url(../images/h1_bg.png) left no-repeat;
	font-size: 22px;
	font-weight: 300;
	line-height: 35px;
	margin: 0 0 0.7em -35px;
	padding-left: 35px;
}
.moduletable h3 a { color: white; }
.moduletable h3 a:hover { text-decoration: none; }

/* menus */
.moduletable_hmenu li,
.moduletable_vmenu li {
	background: none;
	padding: 0;
}

/* hmenu */
.moduletable_hmenu {
	
}

.moduletable_hmenu ul {
	list-style: none;
	margin: 0;
	text-align: center;
}

.moduletable_hmenu > ul > li {
	display: inline-block;
	font-size: 14px;
	margin: 0 0 0 30px;
	position: relative;
	text-transform: uppercase;
	
	zoom: 1;
	*display: inline;
}
.moduletable_hmenu > ul >  li:first-child { padding-left: 0; }

.moduletable_hmenu li > a,
.moduletable_hmenu li > span {
	display: block;
}

.moduletable_hmenu > ul > li > a:hover,
.moduletable_hmenu > ul > li > span:hover {
	text-decoration: none;
}

.moduletable_hmenu ul ul {
  background: #8b8b8b;
  display: none;
  left: 50%;
	margin-left: -97px;
  position: absolute;
  top: 100%;
	width: 195px;
}
.moduletable_hmenu ul li:hover ul { display: block; }
.moduletable_hmenu ul li:last-child ul {
  left: auto;
  right: 0;
}

.moduletable_hmenu ul ul li {
  display: block;
  padding: 3px 10px 5px;
  white-space: nowrap;
}
.moduletable_hmenu ul ul li:first-child {
  padding-top: 10px;
}

.moduletable_hmenu ul ul li > a,
.moduletable_hmenu ul ul li > span {
  text-decoration: none;
}
/* /hmenu */


/* vmenu */
.moduletable_vmenu {}
/* /vmenu */

#top .moduletable_hmenu {
	bottom: 0;
	position: absolute;
	right: 0;
}

#top .moduletable_hmenu > ul > li { padding-top: 20px; }
#top .moduletable_hmenu > ul >li:hover { background: url(../images/menu_li_bg_hover.png) top no-repeat; }

#top .moduletable_hmenu li > a,
#top .moduletable_hmenu li > span { color: #4d4d4d; }

#top .moduletable_hmenu li > a:hover,
#top .moduletable_hmenu li > span:hover { color: #5f167b; }

#top .moduletable_hmenu ul ul li {
  background: #efefef;
  border-bottom: 1px solid white;
}
#top .moduletable_hmenu ul ul li:hover { 
  border-bottom: 1px solid #5f167b;
}

#top .login {
	background: url(../images/login_bg.png) left no-repeat;
	line-height: 20px;
	padding-left: 35px;
	position: absolute;
	right: 0;
	top: -15px;
}
#top .login a { color: #4e4e4e; }

#sidebar .moduletable { margin: 1em 0 0 35px; }
#sidebar .moduletable:first-child { margin-top: 0; }

#footer .moduletable_hmenu li {
	background: url(../images/footer_menu_li_bg.png) 10px no-repeat;
	margin: 0;
	padding-left: 22px;
}
#footer .moduletable_hmenu li:first-child {
	background: none;
	padding-left: 0;
}

#footer .moduletable_hmenu li > a,
#footer .moduletable_hmenu li > span {
	color: #a7a9ac;
	font-size: 12px;
}
#footer .moduletable_hmenu li > a:hover,
#footer .moduletable_hmenu li > span:hover {
	color: #5f167b;
}

#scroll .arrow-left, #scroll .arrow-right {
	background: url(../images/arrows.png) no-repeat;
	cursor: pointer;
	display: none;
	height: 26px;
	left: -20px;
	position: absolute;
	top: 70px;
	width: 26px;
	z-index: 1;
}
#scroll .arrow-right {
	background-position: 0 -26px;
	left: 934px;
}

#scroll .moduletable {
	float: left;
	padding-left: 20px;
	position: relative;
	z-index: 2;
}
#scroll .moduletable:first-child { padding-left:0; }

#scroll .moduletable h3 {
	background: #a7a9ac;
	color: #fff;
	font-size: 18px;
	line-height: 40px;
	margin: 0;
	padding: 0 0 0 20px;
}
#scroll .moduletable:hover h3 { background-color: #7f3f98; }
#scroll .moduletable a { display: block; }

#bottom .moduletable {
	float: left;
	padding: 0 35px 0 44px;
	width: 233px;
}

#system-message ul { margin: 0; list-style: none; }
#system-message dt.error,
#system-message dd.error {
	background: #ffcece;
	border: 1px solid #df8f8f;
	color: #665252;
	padding: 10px 10px 0;
}
#system-message dt.error { border-bottom: none; }
#system-message dd.error { border-top: none; padding-bottom: 10px; }

/* pagination */
.-koowa-pagination, .pagination { text-align: center; }
.-koowa-pagination .limit, .pagination .limit {
	display: none;
}

.-koowa-pagination .pages, .pagination .pages {
	list-style: none;
	margin: 0;
	text-align: center;
}
.-koowa-pagination .pages  li, .pagination .pages li {
	background: none;
	display: inline;
	padding: 0 5px;
}
.-koowa-pagination .count, .pagination .results {
	display: none;
	text-align: center;
}
/* end pagination */

